fixed alignment

--- a/index.css
+++ b/index.css
@@ -8,15 +8,16 @@
 {
     display: flex;
     background-color: black;
-    position: fixed;
     cursor: pointer;
     width: 100vw;
     z-index: 10;
+    position: fixed;
 }
 .navlist{
+    margin: auto;
     list-style: none;
     display: flex;
-    
+    justify-content: space-around;
 }
 .navlist li{
     padding: 2.5vh 3.5vh;
@@ -26,29 +27,38 @@
     text-decoration: none;
     font-family: 'Playfair Display', serif;
     color: white;
-    font-size: 5vh;
+    font-size: 4vh;
+    padding: 2vh;
 }
+
 /*HOME*/
 .homehead
 {
     color: white;
     font-family: 'Playfair Display', serif;
-    font-size: 11vh;
+    font-size: 9vh;
+    text-align: center;
+    
+}
+.homehead2
+{
+    font-size: 12vh;
 }
 .home
 {
-    padding: 50vh 10vh 30vh;
+    padding: 40vh 10vh 40vh;
     margin: auto;
     background: rgba(0,0,0,0.6) url('coronavirus-2.jpg');
     background-size: cover;
     background-blend-mode: hue;
+
 }
 /*TIPS PAGE*/
 .tips
 {
     display: flex;
     flex-direction: column;
-    padding: 5vh;
+    width: 100vw;
 }
 .tips h1{
     font-family: 'Playfair Display', serif;
@@ -57,12 +67,12 @@
     margin:auto;
 }
 .wmas{
-    font-family: 'Playfair Display', serif;
+    font-family: 'Nunito Sans', sans-serif;
     font-size: 7vh;
     margin:0px 3vw 0px 45vw;
 }
 .whan{
-    font-family: 'Playfair Display', serif;
+    font-family: 'Nunito Sans', sans-serif;
     font-size: 7vh;
     margin:0px 40vw 0px 3vw;
 }
@@ -71,9 +81,11 @@
     width:80vw;
     display: flex;
     border: 2px solid black;
-    border-radius: 30px;
+    border-radius: 50px;
     align-items: center;
-    margin: 5vh;
+    margin: auto;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
     padding: 5vh;
     background-color: #ddddff;
 }
@@ -89,6 +101,7 @@
     flex-direction: column;
     background-color: #bbbbff;
     align-items: center;
+    width: 100vw;
 }
 .symptoms h1{
     font-family: 'Playfair Display', serif;
@@ -96,8 +109,9 @@
     padding: 5vh;
     margin:auto;
     color: darkslategray;
+    font-weight: 800;
 }
-table.maintable
+.maintable
 {
     margin-left: auto;
     margin-top: 10vh;
@@ -128,17 +142,21 @@ table.maintable
     border: 3px solid black;
     height: 100 px;
 }
-td{
+.maintable th{
+    font-weight: 400;
+}
+.maintable td{
   background-color: aliceblue;
+  font-family: 'Nunito Sans', sans-serif;
 }
 /*FAQ PAGE*/
 .faq
 {
     display: flex;
     flex-direction: column;
-    padding: 5vh;
     background-color: #669dc7;
     align-items: center;
+    width: 100vw;
 }
 .faq h1{
     font-family: 'Playfair Display', serif;
@@ -147,21 +165,34 @@ td{
     margin:auto;
     color: darkslategray;
 }
+.faq h3{
+    font-family: 'Playfair Display', serif;
+    font-size: 5vh;
+    font-weight: 400;
+    padding: 2vh;
+}
 .flip-card1 {
     background-color: transparent;
     width: 70vw;
     height: 35vh;
-    align-items: "center";
+    align-items: center;
     margin: 3vh;
+    display:flex;
+    align-items: center;
+    justify-content: center;
 
   }
   .flip-card {
     background-color: transparent;
     width: 70vw;
     height: 20vh;
-    align-items: "center";
+    align-items: center;
+    padding: 2vh;
     margin: 3vh;
     z-index: 1;
+    display:flex;
+    align-items: center;
+    justify-content: center;
   }
   
   .flip-card-inner {
@@ -172,13 +203,24 @@ td{
     transition: transform 1s;
     transform-style: preserve-3d;
     box-shadow: 0 0 10px rgba(0, 0 ,0 ,0.5);
+    
+    display:flex;
+    align-items: center;
+    justify-content: center;
   }
   
   .flip-card:hover .flip-card-inner {
     transform: rotateY(180deg);
+    display:flex;
+    align-items: center;
+    justify-content: center;
   }
   .flip-card1:hover .flip-card-inner {
     transform: rotateY(180deg);
+    
+    display:flex;
+    align-items: center;
+    justify-content: center;
   }
   .flip-card-front, .flip-card-back {
     position: absolute;
@@ -189,6 +231,9 @@ td{
     border-radius: 20px;
     box-shadow: 0 0 10px rgba(0, 0 ,0 ,0.5);
     
+    display:flex;
+    align-items: center;
+    justify-content: center;
   }
   
   .flip-card-front {
@@ -196,33 +241,44 @@ td{
     color: darkcyan;
     font-family: 'Playfair Display', serif;
     font-size: 5vh;
+    text-align: centre;
+    margin:auto;
     width: 70vw;
+    display:flex;
+    align-items: center;
+    justify-content: center;
   }
-  
   .flip-card-back {
     background-color: #ddddff;
     color: #003152;
     transform: rotateY(180deg);
-    font-family: 'Playfair Display', serif;
+    font-family: 'Nunito Sans', sans-serif;
+    margin:auto;
     font-size: 3vh;
     width: 70vw;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    padding: 2vh;
+  }
+  .flip-card a{
+      color: #003152;
   }
 /*YOUTUBE*/
 .youtube h1{
     font-family: 'Playfair Display', serif;
     font-size: 10vh;
-    padding: 2vh;
+    padding: 5vh;
     margin: auto;
     color: darkslategray;
     
 }
 .youtube
 {
-    padding: 5vh;
     background-color: #bbbbff;
     align-items: center;
     text-align: center;
-    width: 100%;
+    width: 100vw;
 }
 iframe{
     padding: 15vh;
@@ -230,31 +286,44 @@ iframe{
 /*FOOTER*/
 #footer
 {
-    background-color: black;
+    background-color: #111111;
     font-family: 'Playfair Display', serif;
     font-size: 3vh;
     text-align: center;
     color: white;
     width: 100vw;
-    height: 15vh;
+    height: 17vh;
+    z-index: 10;
+    bottom: 0;
+    left: 0;
 }
-.fa-ul
+.footer p{
+    font-size: 3vh;
+    color: white;
+    padding: 1vh;
+}
+.icons
 {
-    list-style: none;
     display: flex;
-    align-items: center;
+    align-content: center;
     justify-content: center;
-    width: 100vw;
+    text-align: center;
+}
+.icons a{
+    height: 46px;
+    width: 46px;
+    border-radius: 23px;
+    background-color: white;
+    color: black;
+    margin: 2vh;
+    line-height: 30px;
+    font-size: 3vh;
     
 }
-.fa-ul li{
-    padding: 1vh 1vh;
+.icons a i{
+    transition: all 0.4s linear;
+    vertical-align: -webkit-baseline-middle;
 }
-.fa-ul li a{
-    text-decoration: none;
-    font-family: 'Playfair Display', serif;
-    color: white;
-    justify-content: center;
-    font-size: 6vh;
+.icons a:hover i{
+    transform: scale(1.4);
 }
-/**/
